# selectION

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: ISequenceFile.h  bio.h  fileBase.h  fileFastx.h  fileSAM.h  fmIndex.h  fmIndex_settings.h  logger.h  positionFilter.h  pseudoAligner.h  pseudoAligner_settings.h  selection.h  selection_settings.h  sequenceBase.h  sequenceFasta.h  sequenceFastq.h  settingsBase.h  suffixArray.h  suffixComparator.h
src/: CMakeLists.txt  bio.cpp  fileBase.cpp  fileFastx.cpp  fileSAM.cpp  fmIndex.cpp  fmIndex_settings.cpp  logger.cpp  main.cpp  positionFilter.cpp  pseudoAligner.cpp  pseudoAligner_settings.cpp  selection.cpp  selection_settings.cpp  sequenceBase.cpp  sequenceFasta.cpp  sequenceFastq.cpp  settingsBase.cpp  suffixArray.cpp  suffixComparator.cpp
